--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
@@ -7,19 +6,22 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
-
-    <TextView
-        android:id="@+id/text_total"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/text_total"
-        android:layout_marginBottom="20dp"
-        android:textStyle="bold"
-        android:textSize="32sp"/>
-
-    <Button
-        android:id="@+id/button_increment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_increment" />
-</LinearLayout>
+<TextView
+    android:id="@+id/text_total"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="@string/text_total"
+    android:layout_marginBottom="20dp"
+    android:textStyle="bold"
+    android:textSize="32sp"/>
+<Button
+android:id="@+id/button_increment"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content"
+android:text="@string/button_increment" />
+<androidx.fragment.app.FragmentContainerView
+android:layout_width="match_parent"
+android:layout_height="400dp"
+android:id="@+id/fragment_container"
+android:name="com.example.lab_week_10.FirstFragment"/>
+    </LinearLayout>
